k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempconverter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tempconverter
  template:
    metadata:
      labels:
        app: tempconverter
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - tempconverter
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: tempconverter
          image: docker.io/larababic/tempconverter:dev
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: tempconverter
spec:
  selector:
    app: tempconverter
  ports:
    - port: 80
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempconverter-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tempconverter
                port:
                  number: 80
